fixed spacing issues on home page

--- a/css/_landingPage.scss
+++ b/css/_landingPage.scss
@@ -1,6 +1,8 @@
 .landing-container-title {
   position: absolute;
-  padding-right: 10px;
+
+  width: fit-content;
+
   left: 50%;
   top: 18%;
   transform: translate(-50%, -50%);
@@ -13,19 +15,20 @@
   height: 5vh;
   position: absolute;
   top: 48%;
+  z-index: 1;
 }
 
-.background-container__outer-circle,
-.background-container__inner-circle {
+.background-container__outer-circle {
   background-color: white;
   width: 180px;
   height: 180px;
   border-radius: 50%;
   border: 10px solid black;
+  z-index: 1;
   position: absolute;
-  top: 41%;
   left: 50%;
-  transform: translate(-50%);
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .background-container__inner-circle {
@@ -44,7 +47,7 @@
   background-color: white;
   width: 100vw;
   height: 100vh;
-  z-index: -1;
+
   position: absolute;
   top: 50%;
   .begin-btn_container {
