--- a/css/style.scss
+++ b/css/style.scss
@@ -36,6 +36,7 @@ body {
     position: absolute;
     right: 0;
     width: 50px;
+    z-index: 100;
   }
 }
 
@@ -119,6 +120,7 @@ ul {
 #searchBar {
   width: 100%;
   margin: 0;
+  font-family: $pokeFont2;
   .form-control {
     margin: 0;
   }
